# stageflow

./: .gitignore  README.md  flake8  pyproject.toml
stageflow/: __init__.py  testing.py
stageflow/builtins/: dicts.py  lists.py  lists_extra.py  logic.py  strings.py  vars.py
stageflow/core/: __init__.py  context.py  event.py  jsonlogic.py  node.py  pipeline.py  session.py  stage.py
stageflow/docs/: schema.py
stageflow/docs/schemas/: pipeline.json
tests/: test_core_flow.py  test_docs_schema.py  test_full_pipeline.py  test_payload_validation.py  test_pipeline_tester.py  test_std_stages.py  test_subpipeline.py
